# stockguardian

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py  health.py
app/api/v1/: router.py
app/core/: cache.py  config.py  database.py  logging.py  metrics.py  permissions.py  queue.py  redis.py  security.py  tracing.py
app/dependencies/: auth.py  db.py  queue.py
app/exceptions/: __init__.py  domain.py  handlers.py
app/middleware/: request_logging.py
app/models/: __init__.py  base.py  product.py  stock_alert.py  stock_movement.py  supplier.py  user.py
app/repositories/: alert.py  base.py  movement.py  product.py  supplier.py  user.py
app/schemas/: alert.py  auth.py  common.py  dashboard.py  health.py  movement.py  product.py  report.py  report_job.py  supplier.py  user.py
app/services/: alert.py  auth.py  dashboard.py  health.py  movement.py  product.py  report.py  report_jobs.py  supplier.py  user.py
app/utils/: excel.py  pagination.py
app/worker/: settings.py  tasks.py
docker/: Dockerfile  docker-compose.yml
docker/grafana/dashboards/: stockguardian.json
docker/prometheus/: prometheus.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-06-26-alertas-estoque-baixo.md  2026-06-26-dashboard-operacional.md  2026-06-26-deteccao-superestoque.md  2026-06-26-export-excel.md  2026-06-26-health-readiness.md  2026-06-26-k8s-manifests.md  2026-06-26-metricas-prometheus.md  2026-06-26-observability-stack.md  2026-06-26-otel-tracing.md  (+3 more)
k8s/: README.md  api.yaml  configmap.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.example.yaml  worker.yaml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_stock_alerts.py  0003_stock_alerts_overstock.py
scripts/: entrypoint.sh  seed.py
tests/: conftest.py
tests/integration/: test_alerts.py  test_async_export.py  test_auth.py  test_dashboard.py  test_health.py  test_metrics_endpoint.py  test_overstock.py  test_rbac.py  test_reports.py  test_reports_export.py  test_stock_flow.py
tests/unit/: test_alert_logic.py  test_cache.py  test_excel_export.py  test_export_file.py  test_health.py  test_metrics.py  test_movement_logic.py  test_permissions.py  test_report_jobs.py  test_report_logic.py  test_security.py  test_tracing.py
(+21 files in other folders)
