[project]
name = "stockguardian"
version = "0.1.0"
description = "StockGuardian - Plataforma inteligente de gestão e análise de estoque"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Vinicius Oliveira" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1.0",
    "arq>=0.26.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4",
    "types-openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",  # FastAPI usa Depends() em defaults de argumentos
    "UP046", # mantém Generic[...] explícito (compat. Pydantic v2 + clareza)
    "UP047",
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501", "F401"]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
exclude = ["migrations/"]
# redis-py expõe alguns helpers async (ex.: from_url) sem anotação completa;
# isenta apenas chamadas ao pacote redis do check de "untyped call" (resto segue strict).
untyped_calls_exclude = ["redis"]

[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: testes unitários (sem I/O externo)",
    "integration: testes de integração (DB/HTTP)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/migrations/*"]
